--- a/themes/distinctionpp/layouts/partials/head.html
+++ b/themes/distinctionpp/layouts/partials/head.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html lang="{{ $.Site.LanguageCode }}"><head>
-{{ $default_jquery_js := "//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js" }}
-{{ $default_jquery_migrate := "//cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js" }}
+<html lang="{{ $.Site.LanguageCode }}">
+
+<head>
+  {{ $default_jquery_js := "//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js" }}
+  {{ $default_jquery_migrate := "//cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js" }}
   <meta charset="utf-8" />
   <title>{{- .Title -}} | {{- $.Site.Title -}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="canonical" href="{{ .Permalink }}">
   <link href="{{ $.Site.RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
-  {{ with $.Site.Params }}{{ with .favicon }}<link rel="icon" href='{{ . }}' />{{ end }}{{ end }}
-{{ $bootstrap_css := "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css" }}
-{{ if $.Site.Params.bootstrap }}
+  {{ with $.Site.Params }}{{ with .favicon }}
+  <link rel="icon" href='{{ . }}' />{{ end }}{{ end }}
+  {{ $bootstrap_css := "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" }}
+  {{ if $.Site.Params.bootstrap }}
   <link rel="stylesheet" href='{{ $.Site.Params.bootstrap.css | default $bootstrap_css | safeURL }}' crossorigin="anonymous" />
-{{ else }}
+  {{ else }}
   <link rel="stylesheet" href='{{ $bootstrap_css }}' crossorigin="anonymous" />
-{{ end }}
+  {{ end }}
   <link rel="stylesheet" href='{{ $.Site.BaseURL }}/css/style.css' />
 
-{{ if $.Site.Params.jquery }}
-<script type="text/javascript" src='{{ $.Site.Params.jquery.js | default $default_jquery_js | safeURL }}' crossorigin="anonymous"></script>
-<!--<script type="text/javascript" src='{{ $.Site.Params.jquery.migrate | default $default_jquery_migrate | safeURL }}'></script>-->
-{{ else }}
-<script type="text/javascript" src='{{ $default_jquery_js }}' crossorigin="anonymous"></script>
-<!--<script type="text/javascript" src='{{ $default_jquery_migrate }}'></script>-->
-{{ end }}
+  {{ if $.Site.Params.jquery }}
+  <script type="text/javascript" src='{{ $.Site.Params.jquery.js | default $default_jquery_js | safeURL }}' crossorigin="anonymous"></script>
+  <!--<script type="text/javascript" src='{{ $.Site.Params.jquery.migrate | default $default_jquery_migrate | safeURL }}'></script>-->
+  {{ else }}
+  <script type="text/javascript" src='{{ $default_jquery_js }}' crossorigin="anonymous"></script>
+  <!--<script type="text/javascript" src='{{ $default_jquery_migrate }}'></script>-->
+  {{ end }}
 </head>
