add concurrency draft draft for 1813

--- a/themes/distinctionpp/layouts/partials/after-footer.html
+++ b/themes/distinctionpp/layouts/partials/after-footer.html
@@ -105,7 +105,8 @@ jQuery(function(){
         delimiters: [
             {left: "$$", right: "$$", display: true},
             {left: "\\[", right: "\\]", display: true},
-            {left: "\\(", right: "\\)", display: false}
+            {left: "\\(", right: "\\)", display: false},
+            {left: "`$", right: "$`", display: false}
         ],
         ignoredTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
     });
