--- a/themes/distinctionpp/layouts/partials/post/nav.html
+++ b/themes/distinctionpp/layouts/partials/post/nav.html
@@ -1,18 +1,18 @@
-{{ if or .Next .Prev }}
+{{ if or .PrevPage .NextPage }}
 <hr />
 <nav id="article-nav">
   <ul class="pagination">
-  {{ if .Prev }}
+  {{ if .NextPage }}
     <li class="page-item">
-      <a class="page-link" id="article-nav-newer" class="article-nav-link-wrap" href='{{ .Prev.Permalink }}'>
-        {{ i18n "older" }}<strong>{{ .Prev.Title }}</strong>
+      <a class="page-link" id="article-nav-newer" class="article-nav-link-wrap" href='{{ .NextPage.Permalink }}'>
+        {{ i18n "older" }}<strong>{{ .NextPage.Title }}</strong>
       </a>
     </li>
   {{ end }}
-  {{ if .Next }}
+  {{ if .PrevPage }}
     <li class="page-item">
-      <a class="page-link" id="article-nav-older" class="article-nav-link-wrap" href='{{ .Next.Permalink }}'>
-        {{ i18n "newer" }}<strong>{{ .Next.Title }}</strong>
+      <a class="page-link" id="article-nav-older" class="article-nav-link-wrap" href='{{ .PrevPage.Permalink }}'>
+        {{ i18n "newer" }}<strong>{{ .PrevPage.Title }}</strong>
       </a>
     </li>
   {{ end }}
