--- a/themes/distinctionpp/static/css/_variables.scss
+++ b/themes/distinctionpp/static/css/_variables.scss
@@ -1,7 +1,7 @@
 // Config
-$font-content: "Noto Mono", "DejaVu Sans", "Noto Sans CJK SC", "YaHei Consolas Hybrid", "Source Code Pro", "Microsoft YaHei", Consolas, source-sans-pro, monospace, "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-code: "Noto Mono", "DejaVu Sans Mono", "Noto Sans Mono CJK SC", "YaHei Consolas Hybrid", "Source Code Pro", "Microsoft YaHei", Consolas, source-sans-pro, monospace, "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-title: "Noto Mono", "DejaVu Sans", "Noto Sans CJK SC", "YaHei Consolas Hybrid", "Source Code Pro", "Microsoft YaHei", Consolas, source-sans-pro, monospace, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-content: "Noto Mono", "DejaVu Sans", "Noto Sans SC", "Noto Sans CJK SC", Roboto, "YaHei Consolas Hybrid", "Source Code Pro", "Microsoft YaHei", Consolas, source-sans-pro, monospace, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-code: "Noto Mono", "DejaVu Sans Mono", "Noto Sans Mono SC", "Noto Sans Mono CJK SC", "Roboto Mono", "YaHei Consolas Hybrid", "Source Code Pro", "Microsoft YaHei", Consolas, source-sans-pro, monospace, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-title: "Noto Mono", "DejaVu Sans", "Noto Sans SC", "Noto Sans CJK SC", Roboto, "YaHei Consolas Hybrid", "Source Code Pro", "Microsoft YaHei", Consolas, source-sans-pro, monospace, "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 $title-color: #FFFFFF;
 $title-shadow: #000 1px 1px 3px;
