--- a/themes/distinctionpp/layouts/partials/article.html
+++ b/themes/distinctionpp/layouts/partials/article.html
@@ -2,7 +2,7 @@
   <div class="article-panel-inner article-inner">
     <div class="article-inner">
       <header class="article-header">{{ partial "post/title.html" . }}</header><hr />
-      {{ if .TableOfContents }}<div id="toc" class="well toc">{{ .TableOfContents }}</div><br />{{ end }}
+      {{ if .TableOfContents }}<div id="toc" class="well toc m-3 p-1 pr-1 pt-1 pb-2 float-md-right">{{ .TableOfContents }}</div><br />{{ end }}
       <div class="article-entry" itemprop="articleBody">{{ .Content }}</div>
       <hr />
       <footer class="article-footer">
