移除外部字体，会导致加载后闪一下的问题 修复git-lfs导致的图片资源丢失

--- a/themes/distinctionpp/static/css/_variables.scss
+++ b/themes/distinctionpp/static/css/_variables.scss
@@ -1,7 +1,7 @@
 // Config
-$font-content: "Noto Mono", "DejaVu Sans", "Noto Sans SC", "Noto Sans CJK SC", Roboto, "YaHei Consolas Hybrid", "Source Code Pro", "Microsoft YaHei", Consolas, source-sans-pro, monospace, "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-code: "Noto Mono", "DejaVu Sans Mono", "Noto Sans Mono SC", "Noto Sans Mono CJK SC", "Roboto Mono", "YaHei Consolas Hybrid", "Source Code Pro", "Microsoft YaHei", Consolas, source-sans-pro, monospace, "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-title: "Noto Mono", "DejaVu Sans", "Noto Sans SC", "Noto Sans CJK SC", Roboto, "YaHei Consolas Hybrid", "Source Code Pro", "Microsoft YaHei", Consolas, source-sans-pro, monospace, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-content: "Noto Mono", "DejaVu Sans", "Noto Sans SC", "Noto Sans", "Noto Sans CJK SC", Roboto, "YaHei Consolas Hybrid", "Source Code Pro", "Microsoft YaHei", "Wenquanyi Micro Hei","WenQuanYi Zen Hei","WenQuanYi Zen Hei","Apple LiGothic Medium", Consolas, SimHei, monospace, Arial, sans-serif;
+$font-code: "Noto Mono", "DejaVu Sans Mono", "Noto Sans Mono SC", "Noto Sans Mono CJK SC", "Roboto Mono", "YaHei Consolas Hybrid", "Source Code Pro", "WenQuanYi Micro Hei Mono", "Microsoft YaHei", Consolas, monospace, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-title: "Noto Mono", "DejaVu Sans", "Noto Sans SC", "Noto Sans", "Noto Sans CJK SC", Roboto, "YaHei Consolas Hybrid", "Source Code Pro", "Microsoft YaHei", "Wenquanyi Micro Hei","WenQuanYi Zen Hei","WenQuanYi Zen Hei","Apple LiGothic Medium", Consolas, SimHei, monospace, Arial, sans-serif;
 
 $title-color: #FFFFFF;
 $title-shadow: #000 1px 1px 3px;
