update and fix warning
WARN 2019/06/22 13:14:04 Page's .UniqueID is deprecated and will be removed in a future release. Use .File.UniqueID.
WARN 2019/06/22 13:14:04 .File.UniqueID on zero object. Wrap it in if or with: {{ with .File }}{{ .UniqueID }}{{ end }}

--- a/themes/distinctionpp/layouts/_default/terms.html
+++ b/themes/distinctionpp/layouts/_default/terms.html
@@ -1,5 +1,5 @@
 {{ define "main-content" }}
-<article id="{{ .Type }}-{{ .UniqueID }}" class="article-panel article article-type-{{ .Type }}" itemscope itemprop="blogPost">
+<article id="{{ .Type }}-{{ with .File }}{{ .UniqueID }}{{ end }}" class="article-panel article article-type-{{ .Type }}" itemscope itemprop="blogPost">
   <div class="article-panel-inner article-inner">
     <div class="article-inner">
 {{ $site := .Site }}
