--- a/themes/distinctionpp/layouts/partials/page.html
+++ b/themes/distinctionpp/layouts/partials/page.html
@@ -1,4 +1,4 @@
-<article id="{{ .Type }}-{{ .UniqueID }}" class="article-panel article article-type-{{ .Type }}" itemscope itemprop="blogPage">
+<article id="{{ .Type }}-{{ with .File }}{{ .UniqueID }}{{ end }}" class="article-panel article article-type-{{ .Type }}" itemscope itemprop="blogPage">
   <div class="article-panel-inner article-inner">
     <div class="article-inner">
       <header class="article-header">{{ partial "post/title.html" . }}</header><hr />
