--- a/themes/distinctionpp/layouts/partials/after-footer.html
+++ b/themes/distinctionpp/layouts/partials/after-footer.html
@@ -1,16 +1,16 @@
-{{ $default_bootstrap_js := "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.min.js" }}
-{{ $default_bootstrap_popper_js := "//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" }}
+{{ $default_bootstrap_js := "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" }}
+{{ $default_bootstrap_popper_js := "//cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" }}
 {{ $default_highlightjs_js := "//cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/highlight.min.js" }}
 {{ $default_highlightjs_css := "//cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/styles/%STYLE%.min.css" }}
 {{ $default_highlightjs_lang := "//cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/languages/%LANG%.min.js" }}
 {{ $default_gitment_js := "//imsun.github.io/gitment/dist/gitment.browser.js" }}
 {{ $default_gitment_css := "//imsun.github.io/gitment/style/default.css" }}
-{{ $default_mathjax_js := "//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML" }}
-{{ $default_katex_js := "///cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0/katex.min.js" }}
-{{ $default_katex_css := "//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0/katex.min.css" }}
-{{ $default_katex_autorender := "//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0/contrib/auto-render.min.js" }}
-{{ $default_chartjs_js := "//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js" }}
-{{ $default_mermaid_js := "//cdnjs.cloudflare.com/ajax/libs/mermaid/8.0.0/mermaid.min.js" }}
+{{ $default_mathjax_js := "//unpkg.com/mathjax@3/es5/tex-mml-chtml.js" }}
+{{ $default_katex_js := "///cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.js" }}
+{{ $default_katex_css := "//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css" }}
+{{ $default_katex_autorender := "//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/contrib/auto-render.min.js" }}
+{{ $default_chartjs_js := "//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" }}
+{{ $default_mermaid_js := "//cdnjs.cloudflare.com/ajax/libs/mermaid/8.3.1/mermaid.min.js" }}
 {{ if $.Site.Params.bootstrap }}
   {{ if $.Site.Params.bootstrap.popper }}
   <script type="text/javascript" src='{{ $.Site.Params.bootstrap.popper.js | default $default_bootstrap_popper_js | safeURL }}' crossorigin="anonymous"></script>
@@ -70,30 +70,20 @@ jQuery(function(){
 <!-- gitment end -->
 {{ end }}{{ partial "google-analytics.html" . }}
 {{ with $.Site.Params.mathjax }}<!-- mathjax begin -->
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-  tex2jax: {
-    inlineMath: [['$','$'], ['\\(','\\)']],
-    displayMath: [['$$','$$'], ['\[','\]']],
-    processEscapes: true,
-    processEnvironments: true,
-    skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code'],
-    TeX: { 
-      equationNumbers: { autoNumber: "AMS" },
-      extensions: ["AMSmath.js", "AMSsymbols.js"] 
+<script type="text/javascript">
+window.MathJax = {
+    tex: {
+        inlineMath: [['\\(','\\)']],
+        displayMath: [['$$','$$'], ['\[','\]']],
+        processEscapes: true,
+        processEnvironments: true
+    },
+    options: {
+        skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
     }
-  }
-});
+};
 </script>
-<script type="text/x-mathjax-config">
-MathJax.Hub.Queue(function() {
-    // Fix <code> tags after MathJax finishes running. This is a
-    // hack to overcome a shortcoming of Markdown. Discussion at
-    // https://github.com/mojombo/jekyll/issues/199
-    jQuery(MathJax.Hub.getAllJax()).parent().addClass('has-jax');
-});
-</script>
-<script type="text/javascript" async src='{{ .js | default $default_mathjax_js | safeURL }}'></script>
+<script src="{{ .js | default $default_mathjax_js | safeURL }}" id="MathJax-script" async></script>
 <!-- mathjax end -->{{ end }}
 {{ with $.Site.Params.katex }}<!-- katex begin -->
 <script type="text/javascript" src='{{ .js | default $default_katex_js | safeURL }}'></script>
@@ -105,8 +95,7 @@ jQuery(function(){
         delimiters: [
             {left: "$$", right: "$$", display: true},
             {left: "\\[", right: "\\]", display: true},
-            {left: "\\(", right: "\\)", display: false},
-            {left: "`$", right: "$`", display: false}
+            {left: "\\(", right: "\\)", display: false}
         ],
         ignoredTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
     });
