--- a/themes/distinctionpp/layouts/partials/footer.html
+++ b/themes/distinctionpp/layouts/partials/footer.html
@@ -1,12 +1,11 @@
 <footer id="footer">
   <div class="outer">
     <div id="footer-info" class="inner">
-      <strong id="footer-left">{{if $.Site.Copyright }}{{ $.Site.Copyright }}{{ else }}
-        &copy; {{ $.Site.LastChange.Format "2006" }}
+      <strong id="footer-left">{{if $.Site.Copyright }}{{ $.Site.Copyright | safeHTML }}{{ else }}&copy;{{end}}
+        {{ $.Site.LastChange.Format "2006" }}
         {{if and .Author .Author.DisplayName }}{{ .Author.DisplayName | safeHTML}}
         {{else if and $.Site.Params $.Site.Params.Author }}{{ $.Site.Params.Author | safeHTML}}
         {{else if and $.Site.Author $.Site.Author.Name }}{{ $.Site.Author.Name | safeHTML}}
-        {{end}}
         {{end}}
       </strong>
       <strong id="footer-right">
