--- a/themes/distinctionpp/layouts/partials/footer.html
+++ b/themes/distinctionpp/layouts/partials/footer.html
@@ -1,14 +1,14 @@
 <footer id="footer">
   <div class="outer">
-    <div id="footer-info" class="inner">
-      <strong id="footer-left">{{if $.Site.Copyright }}{{ $.Site.Copyright | safeHTML }}{{ else }}&copy;{{end}}
+    <div id="footer-info" class="inner clearfix">
+      <strong id="footer-left float-start">{{if $.Site.Copyright }}{{ $.Site.Copyright | safeHTML }}{{ else }}&copy;{{end}}
         {{ $.Site.LastChange.Format "2006" }}
         {{if and .Author .Author.DisplayName }}{{ .Author.DisplayName | safeHTML}}
         {{else if and $.Site.Params $.Site.Params.Author }}{{ $.Site.Params.Author | safeHTML}}
         {{else if and $.Site.Author $.Site.Author.Name }}{{ $.Site.Author.Name | safeHTML}}
         {{end}}
       </strong>
-      <strong id="footer-right">
+      <strong id="footer-right float-end">
         {{with .Params.PageSource }}
         <a href="{{ .Params.PageSource | safeURL}}" target="_blank">{{ i18n "page_source" }}</a>,{{end}}
         {{if and $.Site.Params $.Site.Params.SiteSource }}
