--- a/themes/distinctionpp/static/css/_partial/_default.scss
+++ b/themes/distinctionpp/static/css/_partial/_default.scss
@@ -8,14 +8,27 @@ ol {
 
 body {
   font-family: $font-content;
+  @media (min-width: 1200px) {
+    font-size: 1.25rem;
+  }
 }
 
-pre, code {
-    font-family: $font-code;
+pre,
+code {
+  font-family: $font-code;
+  @media (min-width: 1200px) {
+    font-size: 1.25rem;
+  }
 }
 
-h1, h2, h3, h4, h5, h6{
-    font-family: $font-title;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $font-title;
+  font-weight: $font-weight-title;
 }
 
 img {
@@ -43,24 +56,68 @@ canvas {
 }
 
 #main {
-    $background-c1: rgb(160,160,160);
-    $background-c2: rgb(176,176,176);
-    $background-c3: rgb(144,144,144);
-    $background-c4: rgb(128,128,128);
-    $background-c5: rgb(192,192,192);
-    background: -webkit-repeating-radial-gradient(circle, transparent, transparent 3em, $background-c1 1em, transparent 6em, $background-c2 6.5em), -webkit-repeating-radial-gradient(ellipse farthest-corner, transparent 1em, $background-c3 1em, transparent 5em, $background-c3 2em), -webkit-repeating-radial-gradient(circle, transparent, transparent 3em, $background-c4 1em, transparent 2em, $background-c4 4em), -webkit-repeating-radial-gradient(circle, transparent 3em, $background-c4 1em, transparent 2em, $background-c4 4em), $background-c5;
-    background: repeating-radial-gradient(circle, transparent, transparent 3em, $background-c1 1em, transparent 6em, $background-c2 6.5em), repeating-radial-gradient(ellipse farthest-corner, transparent 1em, $background-c3 1em, transparent 5em, $background-c3 2em), repeating-radial-gradient(circle, transparent, transparent 3em, $background-c4 1em, transparent 2em, $background-c4 4em), repeating-radial-gradient(circle, transparent 3em, $background-c4 1em, transparent 2em, $background-c4 4em), $background-c5;
-    background-blend-mode: multiply;
-    background-size: 10em 10em;
-    background-position: 0 0, 5em 5em, 15em 50em;
+  $background-c1: rgb(160, 160, 160);
+  $background-c2: rgb(176, 176, 176);
+  $background-c3: rgb(144, 144, 144);
+  $background-c4: rgb(128, 128, 128);
+  $background-c5: rgb(192, 192, 192);
+  background: -webkit-repeating-radial-gradient(
+      circle,
+      transparent,
+      transparent 3em,
+      $background-c1 1em,
+      transparent 6em,
+      $background-c2 6.5em
+    ),
+    -webkit-repeating-radial-gradient(ellipse farthest-corner, transparent 1em, $background-c3
+          1em, transparent 5em, $background-c3 2em),
+    -webkit-repeating-radial-gradient(circle, transparent, transparent 3em, $background-c4
+          1em, transparent 2em, $background-c4 4em),
+    -webkit-repeating-radial-gradient(circle, transparent 3em, $background-c4
+          1em, transparent 2em, $background-c4 4em),
+    $background-c5;
+  background: repeating-radial-gradient(
+      circle,
+      transparent,
+      transparent 3em,
+      $background-c1 1em,
+      transparent 6em,
+      $background-c2 6.5em
+    ),
+    repeating-radial-gradient(
+      ellipse farthest-corner,
+      transparent 1em,
+      $background-c3 1em,
+      transparent 5em,
+      $background-c3 2em
+    ),
+    repeating-radial-gradient(
+      circle,
+      transparent,
+      transparent 3em,
+      $background-c4 1em,
+      transparent 2em,
+      $background-c4 4em
+    ),
+    repeating-radial-gradient(
+      circle,
+      transparent 3em,
+      $background-c4 1em,
+      transparent 2em,
+      $background-c4 4em
+    ),
+    $background-c5;
+  background-blend-mode: multiply;
+  background-size: 10em 10em;
+  background-position: 0 0, 5em 5em, 15em 50em;
 }
 
 blockquote {
-    margin: 0 0 2rem;
-    padding: 0 0.75rem;
-    color: #656565;
-    border-left: 0.2rem solid #c5c5c5;
-    page-break-inside: avoid;
+  margin: 0 0 2rem;
+  padding: 0 0.75rem;
+  color: #656565;
+  border-left: 0.2rem solid #c5c5c5;
+  page-break-inside: avoid;
 }
 
 table {
@@ -113,21 +170,34 @@ table {
 
     span {
       cursor: pointer;
-      text-shadow: 0 0 0.1rem #686868,0 0.05rem 0.05rem #ddd,0 0.1rem 0.05rem #d6d6d6,0 0.15rem 0.05rem #ccc,0 0.2rem 0.05rem #c5c5c5,0 0.25rem 0.05rem #c1c1c1,0 0.3rem 0.05rem #bbb,0 0.35rem 0.05rem #777,0 0.4rem 0.15rem rgba(100,100,100,0.4),0 0.45rem 0.25rem rgba(100,100,100,0.1),0 0.5rem 0.35rem rgba(100,100,100,0.15),0 0.55rem 0.45rem rgba(100,100,100,0.2),0 0.6rem 0.55rem rgba(100,100,100,0.25),0 0.65rem 0.75rem rgba(100,100,100,0.3);
-      @include transition(all .1s linear);
+      text-shadow: 0 0 0.1rem #686868, 0 0.05rem 0.05rem #ddd,
+        0 0.1rem 0.05rem #d6d6d6, 0 0.15rem 0.05rem #ccc,
+        0 0.2rem 0.05rem #c5c5c5, 0 0.25rem 0.05rem #c1c1c1,
+        0 0.3rem 0.05rem #bbb, 0 0.35rem 0.05rem #777,
+        0 0.4rem 0.15rem rgba(100, 100, 100, 0.4),
+        0 0.45rem 0.25rem rgba(100, 100, 100, 0.1),
+        0 0.5rem 0.35rem rgba(100, 100, 100, 0.15),
+        0 0.55rem 0.45rem rgba(100, 100, 100, 0.2),
+        0 0.6rem 0.55rem rgba(100, 100, 100, 0.25),
+        0 0.65rem 0.75rem rgba(100, 100, 100, 0.3);
+      @include transition(all 0.1s linear);
     }
     span:hover {
-      text-shadow:0 0 0.1rem #686868,0 0.05rem 0.05rem #fff,0 0.1rem 0.05rem #fff,0 0.15rem 0.05rem #fff,0 0.2rem 0.05rem #fff,0 0.25rem 0.05rem #fff,0 0.3rem 0.05rem #fff,0 0.35rem 0.05rem #777,0 0.4rem 0.15rem #fff,0 0.45rem 0.25rem #fff,0 0.5rem 0.35rem #fff,0 0.55rem 0.45rem #fff,0 0.6rem 0.55rem #fff,0 0.65rem 0.75rem #fff;
+      text-shadow: 0 0 0.1rem #686868, 0 0.05rem 0.05rem #fff,
+        0 0.1rem 0.05rem #fff, 0 0.15rem 0.05rem #fff, 0 0.2rem 0.05rem #fff,
+        0 0.25rem 0.05rem #fff, 0 0.3rem 0.05rem #fff, 0 0.35rem 0.05rem #777,
+        0 0.4rem 0.15rem #fff, 0 0.45rem 0.25rem #fff, 0 0.5rem 0.35rem #fff,
+        0 0.55rem 0.45rem #fff, 0 0.6rem 0.55rem #fff, 0 0.65rem 0.75rem #fff;
     }
   }
 
   p:not(:first-child) {
-    text-align:center;
-    color:#666;
-    font-family:cursive;
+    text-align: center;
+    color: #666;
+    font-family: cursive;
     font-size: 1rem;
-    text-shadow:0 0.05rem 0 #fff;
-    letter-spacing:0.05rem;
+    text-shadow: 0 0.05rem 0 #fff;
+    letter-spacing: 0.05rem;
     line-height: 2rem;
     margin-top: 2.5rem;
   }
