--- a/themes/distinctionpp/static/css/_partial/_header.scss
+++ b/themes/distinctionpp/static/css/_partial/_header.scss
@@ -1,61 +1,63 @@
 #header {
-    border-bottom: 2px solid #000;
-    padding: 2rem 0.5rem 0.2rem 0.5rem;
-    background-color: rgb(51,51,51);
+  padding: 1rem 0.5rem 0.2rem 0.5rem;
+  background-color: rgb(51, 51, 51);
 }
 
 #site-title {
+  font-size: 6rem;
+  @media (max-width: 1200px) {
     font-size: 4rem;
-    @media (max-width: 432px) {
-        font-size: 3rem;
+  }
+  @media (max-width: 432px) {
+    font-size: 3rem;
+  }
+
+  line-height: 100%;
+  text-align: center;
+  font-weight: bold;
+  a {
+    color: $title-color;
+    text-decoration: none;
+    text-shadow: $title-shadow;
+  }
+
+  @media (min-width: 720px) {
+    a::before {
+      content: url(images/lt-flurl.png);
+      display: inline-block;
     }
 
-    line-height: 100%;
-    text-align: center;
-    font-weight: bold;
-    a {
-        color: $title-color;
-        text-decoration: none;
-        text-shadow: $title-shadow;
+    a::after {
+      content: url(images/rt-flurl.png);
+      display: inline-block;
     }
-
-    @media (min-width: 720px) {
-        a::before {
-            content: url(images/lt-flurl.png);
-            display: inline-block;
-        }
-
-        a::after {
-            content: url(images/rt-flurl.png);
-            display: inline-block;
-        }
-    }
+  }
 }
 
 #site-description {
-    font-size: 2rem;
-    @media (max-width: 432px) {
-        @media (min-width: 375px) {
-            font-size: 1.6rem;
-        }
-        @media (max-width: 375px) {
-            font-size: 1.2rem;
-        }
+  font-size: 2rem;
+  @media (max-width: 432px) {
+    @media (min-width: 375px) {
+      font-size: 1.6rem;
     }
-    color: $description-color;
-    display: block;
-    @include clearfix();
-    font-weight: bold;
-    text-align: center;
-    text-shadow: $title-shadow;
-    line-height: 100%;
+    @media (max-width: 375px) {
+      font-size: 1.2rem;
+    }
+  }
+  color: $description-color;
+  display: block;
+  @include clearfix();
+  font-weight: bold;
+  text-align: center;
+  text-shadow: $title-shadow;
+  line-height: 100%;
 }
 
 #main-nav-brand {
-    color: #222;
+  color: #222;
 }
 
 #main-nav {
-    padding-bottom: 0.4em;
-    background-color: #282828;
+  padding-bottom: 0.4em;
+  background-color: #282828;
 }
