Fix URL of chart.js
Signed-off-by: owentou <owentou@tencent.com>

--- a/themes/distinctionpp/layouts/partials/after-footer.html
+++ b/themes/distinctionpp/layouts/partials/after-footer.html
@@ -9,7 +9,7 @@
 {{ $default_katex_js := "///unpkg.com/katex@latest/dist/katex.min.js" }}
 {{ $default_katex_css := "//unpkg.com/katex@latest/dist/katex.min.css" }}
 {{ $default_katex_autorender := "//unpkg.com/katex@latest/dist/contrib/auto-render.min.js" }}
-{{ $default_chartjs_js := "//unpkg.com/chart.js@latest/dist/Chart.min.js" }}
+{{ $default_chartjs_js := "//unpkg.com/chart.js@latest/dist/chart.min.js" }}
 {{ $default_mermaid_js := "//unpkg.com/mermaid@latest/dist/mermaid.min.js" }}
 {{ if $.Site.Params.bootstrap }}
   {{ if $.Site.Params.bootstrap.popper }}
