--- a/themes/distinctionpp/layouts/partials/comments.html
+++ b/themes/distinctionpp/layouts/partials/comments.html
@@ -20,7 +20,13 @@ s.setAttribute('data-timestamp', +new Date());
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </section>
 {{ end }}
-{{ if $.Site.Params.gitment }}
+{{ if and $.Site.Params.utteranc $.Site.Params.utteranc.repo }}
 <hr />
-<div id="gitment_thread"></div>
+<script src="{{ default "https://utteranc.es/client.js" $.Site.Params.utteranc.js}"
+        repo="{{ $.Site.Params.utteranc.repo }}"
+        issue-term="{{ default "pathname" $.Site.Params.utteranc.issue_term}}"
+        theme="{{ default "github-light" $.Site.Params.utteranc.theme}}"
+        crossorigin="anonymous"
+        async>
+</script>
 {{ end }}
