尝试优化公式渲染配置
Signed-off-by: owent <admin@owent.net>

--- a/themes/distinctionpp/layouts/partials/after-footer.html
+++ b/themes/distinctionpp/layouts/partials/after-footer.html
@@ -90,8 +90,10 @@ jQuery(function(){
         delimiters: [
             {left: "$$", right: "$$", display: true},
             {left: "\\[", right: "\\]", display: true},
-            {left: "\\(", right: "\\)", display: false}
+            {left: "\\(", right: "\\)", display: false},
+            {left: "$", right: "$", display: false},
         ],
+        throwOnError : false,
         ignoredTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
     });
 });
