--- a/themes/distinctionpp/layouts/partials/after-footer.html
+++ b/themes/distinctionpp/layouts/partials/after-footer.html
@@ -40,7 +40,7 @@ jQuery(function (){
 
     jQuery('{{ .selector | default "pre>code" }}').each(function(i, block) {
         try {
-            if (block.className.match(/\bnohighlight\b/i)) {
+            if (block.className.match(/\bnohighlight\b|\bmermaid\b/i)) {
                 return;
             }
             const detectLang = block.className.match(/language-([^\s]+)/i);
@@ -103,7 +103,64 @@ jQuery(function(){
 <script type="text/javascript" src='{{ .js | default $default_chartjs_js | safeURL }}'></script>
 <!-- chart.js end -->{{ end }}
 {{ with $.Site.Params.mermaid }}<!-- mermaid begin -->
-<script type="text/javascript" src='{{ .js | default $default_mermaid_js | safeURL }}'></script>
+<script type="module">
+    import mermaid from "{{ .js | default $default_mermaid_js | safeURL }}";
+    const config = {
+        theme: '{{ .theme | default "default" }}',
+        logLevel: 'fatal',
+        securityLevel: 'loose', // 'sandbox', 'strict', 'loose', 'antiscript'
+        startOnLoad: true,
+        arrowMarkerAbsolute: false,
+        /*
+        er: {
+            diagramPadding: 20,
+            layoutDirection: 'TB',
+            minEntityWidth: 100,
+            minEntityHeight: 75,
+            entityPadding: 15,
+            stroke: 'gray',
+            fill: 'honeydew',
+            fontSize: 12,
+            useMaxWidth: true,
+        },
+        flowchart: {
+            diagramPadding: 8,
+            htmlLabels: true,
+            curve: 'basis',
+        },
+        sequence: {
+            diagramMarginX: 50,
+            diagramMarginY: 10,
+            actorMargin: 50,
+            width: 150,
+            height: 65,
+            boxMargin: 10,
+            boxTextMargin: 5,
+            noteMargin: 10,
+            messageMargin: 35,
+            messageAlign: 'center',
+            mirrorActors: true,
+            bottomMarginAdj: 1,
+            useMaxWidth: true,
+            rightAngles: false,
+            showSequenceNumbers: false,
+        },
+        gantt: {
+            titleTopMargin: 25,
+            barHeight: 20,
+            barGap: 4,
+            topPadding: 50,
+            leftPadding: 75,
+            gridLineStartPadding: 35,
+            fontSize: 11,
+            fontFamily: '"Open Sans", sans-serif',
+            numberSectionStyles: 4,
+            axisFormat: '%Y-%m-%d',
+            topAxis: false,
+        },*/
+    };
+    mermaid.initialize(config);
+</script>
 <!-- mermaid end -->{{ end }}
 {{ with $.Site.Params.styleimport }}<!-- style import begin -->
 <script type="text/javascript">
