--- a/themes/distinctionpp/layouts/partials/head.html
+++ b/themes/distinctionpp/layouts/partials/head.html
@@ -8,7 +8,9 @@
   <title>{{- .Title -}} | {{- $.Site.Title -}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="canonical" href="{{ .Permalink }}">
-  <link href="{{ $.Site.RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
+  {{ with .OutputFormats.Get "rss" -}}
+      {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+  {{ end -}}
   {{ with $.Site.Params }}{{ with .favicon }}
   <link rel="icon" href='{{ . }}' />{{ end }}{{ end }}
   {{ $bootstrap_css := "//unpkg.com/bootstrap@latest/dist/css/bootstrap.min.css" }}
